Fixed container overflow

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -284,6 +284,9 @@
 /* hi  */
 
 @media (max-width:480px) {
+    .container {
+        overflow-x: hidden;
+    }
     header {
         display: flex;
         height: 4rem;
